# rustbook_code

./: .gitignore  README.md
advanced_functions_closures/src/: main.rs
advanced_traits/src/: main.rs
advanced_types/src/: main.rs
branches/src/: main.rs
cargo_custom_builds/: Cargo.toml
cargo_public_api/: Cargo.toml
cargo_public_api/src/: lib.rs
closures_environment/: Cargo.toml
closures_environment/src/: main.rs
closures_environment_usecase/: Cargo.toml
closures_environment_usecase/src/: lib.rs
closures_usecase/: Cargo.toml
closures_usecase/src/: main.rs
combining_rc_refcell/: Cargo.toml
combining_rc_refcell/src/: main.rs
communicator/src/: lib.rs  main.rs
company_manager/: Cargo.toml
company_manager/src/: main.rs
crates_and_documentation/: Cargo.toml
crates_and_documentation/src/: lib.rs
dereference_operator/: Cargo.toml
dereference_operator/src/: main.rs
enums_basics/: Cargo.toml
enums_basics/src/: main.rs
enums_option/src/: main.rs
error_handling/src/: main.rs
fibonacci/src/: main.rs
functions/src/: main.rs
generics_functions/src/: main.rs
generics_methods/src/: main.rs
generics_structs/src/: main.rs
guessing_game/src/: main.rs
hash_maps/src/: main.rs
integration_tests/src/: lib.rs
iterators_implementation/: Cargo.toml
mean_media_mode/: Cargo.toml
oop_state_pattern2/: Cargo.toml
oop_traits/: Cargo.toml
patterns_refutability/: Cargo.toml
rc_sharing_data/: Cargo.toml
threads_messages/: Cargo.toml
threads_move/: Cargo.toml
threads_mutexes/: Cargo.toml
traits_basics/: Cargo.toml
(+48 files in other folders)
